# rag-from-scratch

./: .gitignore  README.md  config.yaml  pyproject.toml
documents/: name.txt
src/: embeddings.py  file_loader.py  rag-from-scratch.ipynb  rag_pipeline.py  simple_rag_pipeline.py  splitter.py  vector_stores.py
src/mcp/: mcp_client.py  mcp_server.py
